--- a/JonahsWhale/Base.lproj/Main.storyboard
+++ b/JonahsWhale/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ne1-ME-zpp">
                                 <rect key="frame" x="20" y="20" width="545" height="560"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KJi-JF-Qrj">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KJi-JF-Qrj" customClass="RAReorderableLayout" customModule="JonahsWhale" customModuleProvider="target">
                                     <size key="itemSize" width="116" height="84"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
