--- a/JonahsWhale/Base.lproj/Main.storyboard
+++ b/JonahsWhale/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -53,7 +54,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ne1-ME-zpp">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ne1-ME-zpp">
                                 <rect key="frame" x="20" y="20" width="545" height="560"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KJi-JF-Qrj" customClass="RAReorderableLayout" customModule="JonahsWhale" customModuleProvider="target">
@@ -92,6 +93,15 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ne1-ME-zpp" firstAttribute="top" secondItem="y22-YY-Ts8" secondAttribute="bottom" constant="20" id="6yW-dL-HRQ"/>
+                            <constraint firstItem="Ne1-ME-zpp" firstAttribute="leading" secondItem="EcV-YK-V6b" secondAttribute="leading" constant="20" id="RVS-P2-aJj"/>
+                            <constraint firstItem="Ne1-ME-zpp" firstAttribute="leading" secondItem="EcV-YK-V6b" secondAttribute="leadingMargin" constant="20" id="Xhd-Cf-nl3"/>
+                            <constraint firstItem="8G0-8b-Yj7" firstAttribute="top" secondItem="Ne1-ME-zpp" secondAttribute="bottom" constant="20" id="epa-m9-5wd"/>
+                            <constraint firstItem="Ne1-ME-zpp" firstAttribute="top" secondItem="EcV-YK-V6b" secondAttribute="top" constant="20" id="fHe-3d-EVA"/>
+                            <constraint firstAttribute="trailing" secondItem="Ne1-ME-zpp" secondAttribute="trailing" constant="20" id="leb-Pu-tUR"/>
+                            <constraint firstItem="8G0-8b-Yj7" firstAttribute="top" secondItem="Ne1-ME-zpp" secondAttribute="bottom" constant="20" id="oGc-iK-xoB"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="galleryCollectionView" destination="Ne1-ME-zpp" id="nea-AR-39P"/>
